force-app/main/default/objects/Basket_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account will be populated upon Lead conversion.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Basket Items</relationshipLabel>
        <relationshipName>Basket_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Generate_Pin__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate a PIN for Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basket_Item_Reference__c</fullName>
        <description>Used to combine the basket item with it&apos;s respective PIN from the external database.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Basket Item Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_PIN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Card PIN</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Basket Items</relationshipLabel>
        <relationshipName>Basket_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_on_the_card__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name on the card</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_registration_number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle registration number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cost_centre__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>cost_centre</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>driver_email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>driver_email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>driver_phone_number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>driver_phone_number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>issuer_program_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>issuer_program_code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>media_holder_type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>media_holder_type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>media_nickname__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>media_nickname</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>media_profile_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>media_profile_code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ost_application_number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ost_application_number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>plan_code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>plan_code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicle_manufacturer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>vehicle_manufacturer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vehicle_plate_country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>vehicle_plate_country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Basket Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BI-{00000}</displayFormat>
        <label>Basket Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Basket Items</pluralLabel>
    <recordTypes>
        <fullName>Driver_Card</fullName>
        <active>true</active>
        <label>Driver Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle_Card</fullName>
        <active>true</active>
        <label>Vehicle Card</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>